--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^5.3.0",
+    "@mdi/font": "^5.9.55",
+    "axios": "^0.19.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
+    "lodash-humps": "^3.1.5",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.4.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -26,8 +33,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "sass": "^1.32.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "^2.0.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.4.3"
   },
   "eslintConfig": {
     "root": true,
